<resources>
    <string name="app_name">mPOS</string>
    <string name="tabOneTitle">Transaction</string>
    <string name="tabTwoTitle">History</string>
    <string name="discountLabel">Enter discount</string>
    <string name="priceLabel">Enter price</string>
    <string name="noteLabel">Add Note</string>
    <string name="creditCardLabel">Credit Card</string>
    <string name="addItem">New Item</string>
    <string name="tab_one">Manual Transaction</string>
    <string name="tab_two">Transaction History</string>
    <string name="new_cart">Start new cart</string>
    <string name="quantityLabel">Quantity</string>
    <string name="quantity_allcaps_label">QUANTITY</string>
    <string name="addButtonLabel">Add</string>
    <string name="cancelTransactionLabel">Are you sure you want \n to CANCEL this transaction?</string>
    <string name="noCancelButtonLabel">No, Go Back</string>
    <string name="yesCancelButtonLabel">Yes, Cancel</string>
    <string name="percentageButton">%</string>
    <string name="cancelTransactionMessage">Are you sure you want to\nCANCEL this transaction?</string>
    <string name="cancelTransactionNO">NO</string>
    <string name="cancelTransactionYES">YES</string>
    <string name="phone_order_button_label">PHONE ORDER</string>
    <string name="cash_button_label">CASH</string>
    <string name="charge_button_label">PAY</string>
    <string name="charge_alt_button_label">BACK</string>
    <string name="split_button_label">SPLIT</string>
    <string name="tender_button_label">TENDER</string>
    <string name="back_button_label">BACK</string>
    <string name="button_five_amount">$5</string>
    <string name="button_ten_amount">$10</string>
    <string name="button_twenty">$20</string>
    <string name="button_fifty">$50</string>
    <string name="button_one_hunderd">$100</string>
    <string name="total_text_label">Total:</string>
    <string name="balance_text_label">BALANCE:</string>
    <string name="transaction_complete_label">Transaction Complete</string>
    <string name="select_receipt_option_label">Waiting for customer to select receipt option</string>
    <string name="print_receipt_button">Print Receipt</string>
    <string name="no_receipt_button">No Receipt</string>
    <string name="money_symbol">$</string>
    <string name="percentage_symbol">&#37;</string>
    <string name="delete_button_label">DELETE</string>
    <string name="security_code_label">Security Code</string>
    <string name="swipe_tap_or_insert_card">Swipe, Tap or Insert Card</string>
    <string name="waiting_for_customer_card">Waiting for Customer to swipe, tap or insert credit card</string>
    <string name="error_reading_card">Error Reading Card</string>
    <string name="please_swipe_again">Please swipe again or manually enter card</string>
    <string name="ready_for_signature_label">Ready for Signature</string>
    <string name="waiting_for_customer_signature">Waiting for customer signature.</string>
    <string name="yy_label">YY</string>
    <string name="mm_label">MM</string>
    <string name="waiting_for_customer_to_select_receipt_option">Waiting for customer to select receipt option</string>
    <string name="select_receipt_option">Select receipt option</string>
    <string name="card_declined">Card Declined</string>
    <string name="transaction_cancelled">Transaction Cancelled</string>
    <string name="choose_another_card">Choose An Option for Payment</string>
    <string name="country_currency">$ </string>
    <string name="viewing_textview_label">Viewing</string>
    <string name="add_note_discount_and_taxes">Add Note, Discount and Taxes</string>
    <string name="total_textview_label">TOTAL:</string>
    <string name="including_tax_label">INCLUDING TAX:</string>
    <string name="viewing_text_label">Viewing</string>
    <string name="enter_amount_received">Enter Amount Received</string>
    <string name="cash_received_label">Cash Received</string>
    <string name="cash_pending_label">Pending Amount</string>
    <string name="cash_to_pay_label">Cash To Pay</string>
    <string name="button_note_label">Note</string>
    <string name="button_send_receipt">SEND RECEIPT</string>
    <string name="button_print_receipt">PRINT RECEIPT</string>
    <string name="button_next">NEXT</string>
    <string name="discount_label">Discount</string>
    <string name="discount_allcaps_label">DISCOUNT</string>
    <string name="tax_label">Tax</string>
    <string name="tax_allcaps_label">TAX</string>
    <string name="cash_label">Cash</string>
    <string name="card_label">Card</string>
    <string name="cash_tendered">Tendered</string>
    <string name="including_tax">Including Tax: </string>
    <string name="enter_note_for_transaction_label">Enter your note for this transaction</string>
    <string name="save_note">SAVE NOTE</string>
    <string name="send_a_receipt">Send a Receipt</string>
    <string name="delivery_method_label">Select Delivery Method</string>
    <string name="sms_receipt_title">SMS Receipt</string>
    <string name="sms_receipt_subtitle">Customer Phone Number</string>
    <string name="email_receipt_title">Email Receipt</string>
    <string name="email_receipt_subtitle">Customer Email Address</string>
    <string name="add_note_discount_button">Add Note, Discount and Taxes</string>
    <string name="cancel_refund_button">CANCEL REFUND</string>
    <string name="issue_refund_button">ISSUE REFUND</string>
    <string name="refund_title_textView">REFUND</string>
    <string name="this_items_will_be_refunded_textView">These Items will be refunded</string>
    <string name="refund_amount_issued">The refund amount will be issued as:</string>
    <string name="split_payment_label">Split Payment</string>
    <string name="select_payment_type">Select Payment Type</string>
    <string name="partial_refund_label">PARTIAL</string>
    <string name="void_label">VOID</string>
    <string name="processing_card_label">Processing Card</string>
    <string name="are_you_sure_you_want_to">Are you sure you want to</string>
    <string name="void_transaction_label">Are you sure you want to REFUND/VOID this transaction?</string>
    <string name="reconcile_confirm_label">Do you want to run reconcile batch process?</string>
    <string name="refund_split_transaction_label">REFUND this transaction?</string>
    <string name="cash_received_split_label">Cash Received</string>
    <string name="same_as_received">Same as Received</string>
    <string name="amount_to_pay">Amount to Pay</string>
    <string name="change_due">Change Due:</string>
    <string name="split_cash_received_label">Cash Received</string>
    <string name="split_card_received_label">Credit Charged</string>
    <string name="charge_amount">Charge amount</string>
    <string name="split_transaction_complete_label">Transaction Complete</string>
    <string name="split_receipt_option_label">Select Receipt Option</string>
    <string name="splie_email_butoon">EMAIL</string>
    <string name="spli_no_receipt">NO RECEIPT</string>
    <string name="cash_received">Cash Received</string>
    <string name="split_error_amount">Amount to pay can not exceed remaining balance</string>
    <string name="split_error_cash">Amount to pay can not exceed cash received</string>
    <string name="not_tax_label">NO TAX</string>
    <string name="cash_drawer_status_message">Cash drawer open or disconnected &#8230;</string>
    <string name="quantity_error_label">Quantity need to be greater than zero</string>
    <string name="gratuty_amount_label">Select gratuity amount</string>
    <string name="gratuity_wait_message">Waiting for customer to select gratuity amount</string>
    <string name="button_no_tip_label">No gratuity</string>
    <string name="wait_for_pt">Waiting for payment terminal</string>
    <string name="voided_history_label">Voided</string>
    <string name="refund_history_label">Refund</string>
    <string name="partial_refund_history_label">Partial Refund</string>
    <string name="upper_history_tx_label">Original Transaction #: </string>
    <string name="lower_history_tx_label">Transaction #  %1$s</string>
    <string name="history_detail_tx_total_label">Total:</string>
    <string name="history_detail_tx_total_tax_label">Including Tax: %1$s</string>
    <string name="history_str_on_date">on %1$s</string>
    <string name="history_card_type_credit">CREDIT</string>
    <string name="history_card_type_debit">DEBIT</string>
    <string name="history_car_exp_date">EXP. </string>
    <string name="history_cash_refunded">REFUNDED</string>
    <string name="history_ready_to_void_label">Ready to Void Transaction</string>
    <string name="history_waiting_for_selection_label">Waiting for selection</string>
    <string name="history_header_voided_label">Voided</string>
    <string name="history_void_process_label">Processing void, please wait</string>
    <string name="history_refund_type_label">Refund Type</string>
    <string name="history_select_refund_type_label">Select Refund Type</string>
    <string-array name="months_array">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="transaction_history_options">
        <item>All Transactions</item>
        <item>Completed Transactions</item>
        <item>Cash Transactions</item>
        <item>Credit Transactions</item>
        <item>Debit Transactions</item>
        <item>Voided Transactions</item>
        <item>Refunded Transactions</item>
        <item>Partial Refund Transactions</item>
        <item>Transactions With Notes</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">Payment Terminal</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string name="creditCardNumber">Credit Card Number</string>
    <string name="creditExpirationLabel">Expiration</string>
    <string name="creditCardHolder">Card Holder</string>
    <string name="creditAuthCode">Auth Code</string>
    <string name="cancel_transaction_btn">CANCEL TRANSACTION</string>
    <string name="blank_button">BUTTON</string>
    <string name="str_pay">PAY</string>
    <string name="str_dollar_zero">$0.00</string>
    <string name="str_dollar_zero_with_space">$ 0.00</string>
    <string name="str_zero_value">0.00</string>
    <string name="str_card_encrypted_value">**** **** ****</string>
    <string name="str_card_expiration_date">XX/XX</string>
    <string name="str_card_auth_code">XXXXXX</string>
    <string name="str_print">PRINT</string>
    <string name="str_amount_to_pay">Amount to Pay</string>
    <string name="str_label_remove">Remove</string>
    <string name="str_description">Description</string>
    <string name="str_change_dollar_amount">Change: $0.00</string>
</resources>