<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.verifone.swordfish.manualtransaction.SupportFragments.TransactionSplitPaymentCompanion">

    <LinearLayout
        android:id="@+id/startLinear"
        android:layout_width="734dp"
        android:layout_height="469dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="138dp"
            android:text="@string/split_payment_label"
            android:textAppearance="@style/fontForTextViewTransactionRefundTitle" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="19dp"
            android:text="@string/select_payment_type"
            android:textAppearance="@style/fontForTextViewTransactionRefundSubTitle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cashButton"
                android:layout_width="300dp"
                android:layout_height="90dp"
                android:layout_marginStart="32dp"
                android:background="@color/azure"
                android:text="@string/cash_label"
                android:textAppearance="@style/fontForTextViewTransactionHistoryButton" />

            <Space
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/creditButton"
                android:layout_width="300dp"
                android:layout_height="90dp"
                android:layout_marginEnd="32dp"
                android:background="@color/azure"
                android:text="@string/creditCardLabel"
                android:textAppearance="@style/fontForTextViewTransactionHistoryButton" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/changeDueLinear"
        android:layout_width="734dp"
        android:layout_height="469dp"
        android:orientation="vertical"
        android:visibility="invisible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="221dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="262dp"
                android:text="@string/change_due"
                android:textAppearance="@style/fontForTextViewTransactionHistoryTotalLabel" />

            <TextView
                android:id="@+id/changeDue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/str_dollar_zero_with_space"
                android:textAppearance="@style/fontForTextViewTransactionHistoryTotalLabel" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/settleLinear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="invisible">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="60dp"
            android:layout_height="52dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="80dp"
            android:contentDescription="@null"
            android:src="@drawable/icon_green_checkmark" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="21.5dp"
            android:text="@string/split_transaction_complete_label"
            android:textAppearance="@style/fontForTextViewTransactionHistoryTotalLabel" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/split_receipt_option_label"
            android:textAppearance="@style/fontForTextViewTransactionRefundSubTitle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/emailReceipt"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="300dp"
                android:layout_height="90dp"
                android:layout_marginStart="52dp"
                android:background="@color/azure"
                android:text="@string/splie_email_butoon"
                android:textAppearance="@style/fontForTextViewTransactionHistoryButton" />

            <Button
                android:id="@+id/printReceipt"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="300dp"
                android:layout_height="90dp"
                android:layout_marginStart="30dp"
                android:background="@color/azure"
                android:text="@string/str_print"
                android:textAppearance="@style/fontForTextViewTransactionHistoryButton" />
        </LinearLayout>

        <Button
            android:id="@+id/noReceipt"
            android:layout_width="630dp"
            android:layout_height="90dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="23dp"
            android:background="@color/button_grey"
            android:text="@string/spli_no_receipt"
            android:textAppearance="@style/fontForTextViewTransactionHistoryDetailTotal" />

    </LinearLayout>

</FrameLayout>
