<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cash_received"
        android:textAppearance="@style/fontForTextViewTransactionHistoryDetailDate"
        android:id="@+id/textView25"
        android:layout_marginStart="30dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="79dp"
        android:textAppearance="@style/fontForTextViewTransactionHistory"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/cashReceived"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="31dp"
        android:layout_gravity="center_vertical"
        android:hint="@string/cash_received_split_label" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_amount_to_pay"
        android:textAppearance="@style/fontForTextViewTransactionHistoryDetailDate"
        android:layout_marginStart="30dp"
        android:id="@+id/textView27" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="79dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textAppearance="@style/fontForTextViewTransactionRefundSubTitle"
            android:id="@+id/amountToPayTxt"
            android:layout_marginStart="30dp"
            android:layout_gravity="center_vertical"
            android:hint="@string/amount_to_pay" />

        <Space
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/fontForTextViewTransactionHistoryDetailDate"
            android:text="@string/same_as_received"
            android:id="@+id/textView23"
            android:layout_gravity="center_vertical" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/checkBox"
            android:layout_marginEnd="31dp"
            android:buttonTint="@color/azure"
            android:checked="true"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/pinkish_grey"
        android:id="@+id/sView"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="31dp" />

</LinearLayout>