<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="501dp"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="27dp"
            android:text="@string/cash_button_label"
            android:textColor="@color/warm_grey" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="38dp"
            android:layout_height="43dp"
            android:layout_marginBottom="58dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/icon_cash" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="74dp"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="60dp"
        android:layout_weight="1"
        android:text="@string/cash_tendered"
        android:textColor="@color/greyish_brown"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginEnd="40dp"
        android:layout_marginLeft="40dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/historyCashTotalLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="54dp"
            android:text="@string/str_dollar_zero"
            android:textAlignment="viewEnd"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/historyCashChangeLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="43dp"
            android:text="@string/str_change_dollar_amount"
            android:textAlignment="viewEnd"
            android:textColor="@color/warm_grey" />
    </LinearLayout>
</LinearLayout>