<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="horizontal"
    tools:context="com.verifone.swordfish.manualtransaction.SupportFragments.ButtonsFragment">


    <Button
        android:id="@+id/btn_cancel_transaction"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="37sp"
        android:background="@android:color/transparent"
        android:fontFamily="Roboto-Regular"
        android:foregroundGravity="center_vertical"
        android:text="@string/cancel_transaction_btn"
        android:textColor="@color/azure"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btn_blank"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="18.5sp"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:fontFamily="Roboto-Bold"
        android:foregroundGravity="center_vertical"
        android:text="@string/blank_button"
        android:textColor="@color/azure"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btn_pay"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|end"
        android:layout_marginEnd="0sp"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:fontFamily="Roboto-Regular"
        android:text="@string/str_pay"
        android:textColor="@color/azure"
        android:textSize="24sp" />


</LinearLayout>
